gccida/g1/reload_cse_regs
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8671:1: error: use of undeclared identifier '$46E27178171750CEF28E8B43DEBEAD96'
$46E27178171750CEF28E8B43DEBEAD96 *v26; // r8 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8671:36: error: use of undeclared identifier 'v26'
$46E27178171750CEF28E8B43DEBEAD96 *v26; // r8 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8720:4: error: expected ';' after expression
rtx v75; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8720:5: error: use of undeclared identifier 'v75'
rtx v75; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8721:4: error: expected ';' after expression
rtx v76; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8721:5: error: use of undeclared identifier 'v76'
rtx v76; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8727:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v82; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8737:4: error: expected ';' after expression
rtx ptra; // [rsp+8h] [rbp-90h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8737:5: error: use of undeclared identifier 'ptra'; did you mean 'ptr'?
rtx ptra; // [rsp+8h] [rbp-90h] 
    ^~~~
    ptr
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8736:9: note: 'ptr' declared here
_QWORD *ptr; // [rsp+8h] [rbp-90h] 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8744:4: error: expected ';' after expression
rtx newa; // [rsp+20h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8744:5: error: use of undeclared identifier 'newa'
rtx newa; // [rsp+20h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8745:1: error: use of undeclared identifier '$46E27178171750CEF28E8B43DEBEAD96'
$46E27178171750CEF28E8B43DEBEAD96 *v100; // [rsp+28h] [rbp-70h] 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8745:36: error: use of undeclared identifier 'v100'
$46E27178171750CEF28E8B43DEBEAD96 *v100; // [rsp+28h] [rbp-70h] 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8748:4: error: expected ';' after expression
rtx arg1; // [rsp+38h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8748:5: error: use of undeclared identifier 'arg1'
rtx arg1; // [rsp+38h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8749:4: error: expected ';' after expression
rtx orig; // [rsp+40h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8749:5: error: use of undeclared identifier 'orig'
rtx orig; // [rsp+40h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8750:4: error: expected ';' after expression
rtx insn; // [rsp+48h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/reload1.c:8750:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+48h] [rbp-50h] 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_regs/src/obj/reload1.o] Error 1
